--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "moment": "^2.24.0",
+    "pusher": "^2.2.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-momentjs": "^0.1.2"
@@ -30,7 +32,7 @@
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.2",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
