--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "moment": "^2.24.0",
     "pusher": "^2.2.0",
     "vue": "^2.5.2",
