--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.0.0",
     "moment": "^2.24.0",
     "pusher": "^2.2.0",
+    "pusher-js": "^4.4.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-momentjs": "^0.1.2"
