--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "copy-webpack-plugin": "^4.1.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
+    "dotenv-webpack": "^1.7.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
